# ldmx-g4-vis

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  detesselate.ipynb  env.sh  ldmx-g4-vis
ecal/: README.md  detesselate.ipynb
ecal/stl/: cooling_plate.stl  layer_A_strongbacks.stl  mezzanine_only.stl  motherboard5_assembly.stl  motherboard5_only.stl  motherboard6_assembly.stl  motherboard6_only.stl  nohole_motherboard5_assembly.stl  nohole_motherboard5_only.stl  nohole_motherboard6_assembly.stl  nohole_motherboard6_only.stl  support_box.stl  tungsten_plate.stl
src/: G4Session.cc  G4Session.hh  VisAttributesStore.cc  VisAttributesStore.hh  load_gdml.cc
